--- a/styles/index.css
+++ b/styles/index.css
@@ -6,18 +6,31 @@
 @tailwind components;
 /* Stop purging. */
 
+/*
 html,
 body {
   @apply bg-gray-50 dark:bg-gray-900;
-}
+} */
 
 /* Write your own custom component styles here */
-.btn-blue {
+/* .btn-blue {
   @apply px-4 py-2 font-bold text-white bg-blue-500 rounded;
-}
+} */
 
 /* Start purging... */
 @tailwind utilities;
 /* Stop purging. */
 
 /* Your own custom utilities */
+
+
+.root,
+#root,
+#docs-root {
+  --primary: tomato;
+  --secondary: #a0aec0;
+  --accent: #718096;
+  --background: #fff;
+  --main: #0d0106;
+  --header: #2d3748;
+}
